--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Számológép</title>
         <link rel="stylesheet" href="css.css" />
-       
+        <script src="main.js" type="module"></script>
     </head>
     <body>
         <main>
             <header>Számológép</header>
             <article>
                 <section class="kijelzo">
-                    <span class="kifejezes"></span
-                    ><span class="eredmeny"></span>
+                    <span class="kifejezes"></span>
+                    <span class="eredmeny"></span>
                 </section>
-                <section class="szamok"></section>
+                <section class="szamok">
+                    
+                </section>
                 <section class="muvjelek">
                     <button id="osszeadas">+</button>
                     <button id="kivonas">-</button>
@@ -28,7 +30,7 @@
                     <button id="torles">C</button>
                 </section>
             </article>
-            <footer>Saját név</footer>
+            <footer>Weimper Gergő Zsombor</footer>
         </main>
     </body>
 </html>
